--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "data-provider": "cd .. && npm run build:data-provider",
-    "build": "cross-env NODE_ENV=production vite build",
+    "build": "cross-env NODE_ENV=development vite build",
     "build:ci": "cross-env NODE_ENV=development vite build --mode ci",
     "dev": "cross-env NODE_ENV=development vite",
     "preview-prod": "cross-env NODE_ENV=development vite preview",
