--- a/.env.example
+++ b/.env.example
@@ -90,7 +90,7 @@ MONGO_URI=mongodb://127.0.0.1:27018/LibreChat
 # Access key from OpenAI platform.
 # Leave it blank to disable this feature.
 # Set to "user_provided" to allow the user to provide their API key from the UI.
-OPENAI_API_KEY="user_provided"
+OPENAI_API_KEY=user_provided
 
 # Identify the available models, separated by commas *without spaces*.
 # The first will be default.
