--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3.4"
 
 services:
   api:
-    container_name: LibreChat
+    container_name: QIMA-GPT
     ports:
       - 3080:3080
     depends_on:
