feat(update): SP-16525 chat with file

--- a/.env.example
+++ b/.env.example
@@ -101,6 +101,12 @@ ANTHROPIC_API_KEY=user_provided
 # AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME= # Deprecated
 # PLUGINS_USE_AZURE="true" # Deprecated
 
+AZURE_OPENAI_ENDPOINT=https://gpt4-turbo-0125.openai.azure.com
+EMBEDDINGS_PROVIDER=azure
+# EMBEDDINGS_MODEL=text-embedding-ada-002
+# AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=text-embedding-3-small
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
+
 #============#
 # BingAI     #
 #============#
