--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@
 #               Server Configuration               #
 #==================================================#
 
+
+# CUSTOM_FOOTER="My custom footer"
+
 HOST=localhost
 PORT=3080
 
@@ -55,7 +58,7 @@ DEBUG_CONSOLE=false
 #                     Endpoints                     #
 #===================================================#
 
-# ENDPOINTS=openAI,assistants,azureOpenAI,bingAI,google,gptPlugins,anthropic
+# ENDPOINTS=openAI,assistants,azureOpenAI,bingAI,chatGPTBrowser,google,gptPlugins,anthropic
 
 PROXY=
 
@@ -78,44 +81,54 @@ PROXY=
 #============#
 
 ANTHROPIC_API_KEY=user_provided
-# ANTHROPIC_MODELS=claude-3-opus-20240229,claude-3-sonnet-20240229,claude-3-haiku-20240307,claude-2.1,claude-2,claude-1.2,claude-1,claude-1-100k,claude-instant-1,claude-instant-1-100k
+ANTHROPIC_MODELS=claude-1,claude-instant-1,claude-2
 # ANTHROPIC_REVERSE_PROXY=
 
 #============#
 # Azure      #
 #============#
 
+# AZURE_API_KEY=
+# AZURE_OPENAI_API_INSTANCE_NAME=
+# AZURE_OPENAI_API_DEPLOYMENT_NAME=
+# AZURE_OPENAI_API_VERSION=
+# AZURE_OPENAI_API_COMPLETIONS_DEPLOYMENT_NAME=
+# AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME=
 
-# Note: these variables are DEPRECATED
-# Use the `librechat.yaml` configuration for `azureOpenAI` instead
-# You may also continue to use them if you opt out of using the `librechat.yaml` configuration
+# Identify the available models, separated by commas *without spaces*.
+# The first will be default.
+# Leave it blank to use internal settings.
+AZURE_OPENAI_MODELS=gpt-3.5-turbo,gpt-4
 
-# AZURE_OPENAI_DEFAULT_MODEL=gpt-3.5-turbo # Deprecated
-# AZURE_OPENAI_MODELS=gpt-3.5-turbo,gpt-4 # Deprecated
-# AZURE_USE_MODEL_AS_DEPLOYMENT_NAME=TRUE # Deprecated
-# AZURE_API_KEY= # Deprecated
-# AZURE_OPENAI_API_INSTANCE_NAME= # Deprecated
-# AZURE_OPENAI_API_DEPLOYMENT_NAME= # Deprecated
-# AZURE_OPENAI_API_VERSION= # Deprecated
-# AZURE_OPENAI_API_COMPLETIONS_DEPLOYMENT_NAME= # Deprecated
-# AZURE_OPENAI_API_EMBEDDINGS_DEPLOYMENT_NAME= # Deprecated
-# PLUGINS_USE_AZURE="true" # Deprecated
+# To use Azure with the Plugins endpoint, you need the variables above, and uncomment the following variable:
+# NOTE: This may not work as expected and Azure OpenAI may not support OpenAI Functions yet
+# Omit/leave it commented to use the default OpenAI API
 
-#============#
-# BingAI     #
-#============#
+# PLUGINS_USE_AZURE="true"
 
-BINGAI_TOKEN=user_provided
+##########################
+# BingAI Endpoint:
+##########################
+
+# Also used for Sydney and jailbreak
+# To get your Access token for Bing, login to https://www.bing.com
+# Use dev tools or an extension while logged into the site to copy the content of the _U cookie.
+#If this fails, follow these instructions https://github.com/danny-avila/LibreChat/issues/370#issuecomment-1560382302 to provide the full cookie strings.
+# Set to "user_provided" to allow the user to provide its token from the UI.
+# Leave it blank to disable this endpoint.
+BINGAI_TOKEN="user_provided"
+
+# BingAI Host:
+# Necessary for some people in different countries, e.g. China (https://cn.bing.com)
+# Leave it blank to use default server.
 # BINGAI_HOST=https://cn.bing.com
-
 #============#
 # Google     #
 #============#
 
 GOOGLE_KEY=user_provided
 # GOOGLE_MODELS=gemini-pro,gemini-pro-vision,chat-bison,chat-bison-32k,codechat-bison,codechat-bison-32k,text-bison,text-bison-32k,text-unicorn,code-gecko,code-bison,code-bison-32k
-# GOOGLE_REVERSE_PROXY=
-
+# GOOGLE_REVERSE_PROXY= 
 #============#
 # OpenAI     #
 #============#
@@ -130,10 +143,45 @@ DEBUG_OPENAI=false
 
 # OPENAI_SUMMARIZE=true
 # OPENAI_SUMMARY_MODEL=gpt-3.5-turbo
+##########################
+# ChatGPT Endpoint:
+##########################
 
-# OPENAI_FORCE_PROMPT=true
+# ChatGPT Browser Client (free but use at your own risk)
+# Access token from https://chat.openai.com/api/auth/session
+# Exposes your access token to `CHATGPT_REVERSE_PROXY`
+# Set to "user_provided" to allow the user to provide its token from the UI.
+# Leave it blank to disable this endpoint
+CHATGPT_TOKEN="user_provided"
 
-# OPENAI_REVERSE_PROXY=
+# Identify the available models, separated by commas. The first will be default.
+# Leave it blank to use internal settings.
+CHATGPT_MODELS=text-davinci-002-render-sha,gpt-4
+# NOTE: you can add gpt-4-plugins, gpt-4-code-interpreter, and gpt-4-browsing to the list above and use the models for these features;
+# however, the view/display portion of these features are not supported, but you can use the underlying models, which have higher token context
+# Also: text-davinci-002-render-paid is deprecated as of May 2023
+
+# Reverse proxy setting for OpenAI
+# https://github.com/waylaidwanderer/node-chatgpt-api#using-a-reverse-proxy
+# By default it will use the node-chatgpt-api recommended proxy, (it's a third party server)
+# CHATGPT_REVERSE_PROXY=<YOUR REVERSE PROXY>
+
+##########################
+# Anthropic Endpoint:
+##########################
+# Access key from https://console.anthropic.com/
+# Leave it blank to disable this feature.
+# Set to "user_provided" to allow the user to provide their API key from the UI.
+# Note that access to claude-1 may potentially become unavailable with the release of claude-2.
+ANTHROPIC_API_KEY="user_provided"
+ANTHROPIC_MODELS=claude-1,claude-instant-1,claude-2
+
+#############################
+# Plugins:
+#############################
+
+# Identify the available models, separated by commas *without spaces*.
+# The first will be default.
 
 # OPENAI_ORGANIZATION=
 
@@ -353,9 +401,9 @@ FIREBASE_APP_ID=
 #                        UI                         #
 #===================================================#
 
-APP_TITLE=LibreChat
+APP_TITLE=QIMA-GPT
 # CUSTOM_FOOTER="My custom footer"
-HELP_AND_FAQ_URL=https://librechat.ai
+#HELP_AND_FAQ_URL=https://librechat.ai
 
 # SHOW_BIRTHDAY_ICON=true
 
@@ -366,8 +414,15 @@ HELP_AND_FAQ_URL=https://librechat.ai
 
 # NODE_ENV=
 
+# If using Redis, you should flush the cache after changing any LibreChat settings
 # REDIS_URI=
 # USE_REDIS=
+
+# Give the AI Icon a Birthday Hat :)
+# Will show automatically on February 11th (LibreChat's birthday)
+# Set this to false to disable the birthday hat
+# Set to true to enable all the time.
+# SHOW_BIRTHDAY_ICON=false
 
 # E2E_USER_EMAIL=
 # E2E_USER_PASSWORD=
